--- a/searchenginefrontend/package.json
+++ b/searchenginefrontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "jwt-decode": "^4.0.0",
+    "ldrs": "^1.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.8.2",
     "react": "^18.3.1",
